@@ -18,7 +18,7 @@ reporting-disabled = false
 
 [logging]
 # logging level can be one of "debug", "info", "warn" or "error"
-level  = "debug"
+level  = "warn"
 file   = "/var/log/influxdb.log"         # stdout to log to standard out
 
 # Configure the admin server
