@@ -1,0 +1,9 @@
+---
+- name: Disks | Deploy monit config
+  template: src=monit.d/disks.conf.j2 dest=/etc/monit/conf.d/disks.conf
+  notify: 
+    - restart monit
+  tags:
+    - disks
+    - monit
+
