@@ -10,11 +10,11 @@ disks:
   - /dev/sdf  
   - /dev/md0
 # list all disks on this server for which we can read the temperature
-# sda is ssd and do not work; sata disks are all working
+# sda,sdd are ssd and do not work; sata disks are all working
 disks_temperature: 
   - /dev/sdb
   - /dev/sdc
-  - /dev/sdd  
+  - /dev/sde  
 # a list of partitions
 partitions:
   - /media/backup
