@@ -1,3 +1,7 @@
+2014-06-27  Pierre Aubert  <pierre@imac-pierre.home>
+
+	* roles/admin/templates/influxdb.toml.j2 (level): setlogleve to warn
+
 2014-06-25  Pierre Aubert  <pierre@imac-pierre.home>
 
 	* roles/admin/vars/main.yml (carbon_host): upgrade es to 1.2
